# appimage-qt-cross-example

./: .travis.sh  .travis.yml  CMakeLists.txt  LICENSE  README.md  my_app.desktop
